Reset Canada products, add favicon and SEO tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ftidking</title>
+  
+  <!-- SEO Meta Tags -->
+  <title>FTIDKING | Premium Worldwide Boxing & FTID Services</title>
+  <meta name="description" content="FTIDKING offers top-tier boxing and FTID services worldwide. Fast, secure, and reliable shipping solutions for United States, Canada, Germany, UK, and more." />
+  <meta name="keywords" content="FTID, Boxing Services, Shipping Solutions, FTIDNA, FTIDV3, LIT, RTS, FedEx, UPS, USPS, DHL, DPD, Royal Mail, Canada Post" />
+  <meta name="author" content="FTIDKING" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ftidking.com/" />
+  <meta property="og:title" content="FTIDKING | Premium Worldwide Boxing & FTID Services" />
+  <meta property="og:description" content="Top-tier boxing & FTID services worldwide. Professional shipping solutions with maximum success rates." />
+  <meta property="og:image" content="/favicon.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ftidking.com/" />
+  <meta property="twitter:title" content="FTIDKING | Premium Worldwide Boxing & FTID Services" />
+  <meta property="twitter:description" content="Top-tier boxing & FTID services worldwide. Professional shipping solutions with maximum success rates." />
+  <meta property="twitter:image" content="/favicon.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
